Fix bug#4938: on print, +Indexes link and .sticky_columns remain visible

--- a/themes/original/css/printview.css
+++ b/themes/original/css/printview.css
@@ -109,7 +109,7 @@
         display: none;
     }
 
-    .sticky_columns {
+    .sticky_columns tr {
         display: none;
     }
 
